# streamsampler

./: LICENSE.txt  NEWS.txt  README.rst  bootstrap.py  buildout.cfg  pyproject.toml  setup.py  upload.sh
src/streamsampler/: __init__.py  cli.py  streamsampler.py
src/streamsampler/samplers/: r_sampler.py
tests/: __init__.py  test_cli.py  test_streamsampler.py
