[build-system]
requires = ["poetry-core==1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10.1"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py39"
isort_known_third_party = ["numpy", "torch"]

[[tool.pysen.lint.mypy_targets]]
  paths = [
      "scripts",
      ]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
